# TCIE-TESTS

./: .travis.yml  Makefile  pyproject.toml  removeUnusedFiles.sh  stringTranslation.sh
scripts/: setup_env.sh
scripts/Travis/: pushToArtifactory.sh  pushToPerforce.sh  runTests.sh  schemaConversion.sh
