[tool.poetry]
name = "test-tcie"
description = "Test Runs"
version = "3.0.0"

authors = [
  "Qasim Abdullah <qasim.abdullah@travis-ci.org>"
]

[tool.poetry.dependencies]
python = ">=3.11"
aiohttp = "^3.8.1"

types-pyyaml = "6.0.12.11" # ISSUES?

requests = { version = "^2.28", extras = ["security"] }
tomli = { version = "^2.0.1", python = "<3.11", allow-prereleases = true }
pendulum = { version = "^2.1.2", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"
